# anonymous-adult-market-research-panel

./: .env.example  .gitignore  README.md
.github/workflows/: circuits.yml  services.yml  supabase.yml
apps/web/: .env.example  Dockerfile  next.config.ts  package-lock.json  package.json  postcss.config.cjs  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
circuits/age-proof/: Nargo.toml  Prover.toml  Prover.toml.example
circuits/age-proof/src/: main.nr  tests.nr  utils.nr
circuits/age-proof/tests/: test_age.nr
docs/: CONTRIBUTING.md
docs/dev-docs/: 00-architecture-overview.md  01-zk-age-verification.md  02-anonymous-credentials.md  03-frontend-nextjs.md  04-go-api-gateway.md  05-rust-zk-proving-service.md  06-python-analytics-service.md  07-quantum-sampling-service.md  08-supabase-database-design.md  09-security-pqc-runtime.md  10-federated-learning-design.md  PROGRESS.md  architecture.md  backend-microservices.md  commerce-supabase.md  frontend.md  security-zkp.md
infra/: docker-compose.yml
infra/helm/analytics/: Chart.yaml  values.yaml
infra/helm/api-gateway/: Chart.yaml  (+1 more)
infra/spin/: spin.toml
infra/tetragon/: export-config.yaml
services/analytics/: .env.example  Dockerfile  config.py  main.py  requirements.txt
services/api-gateway/: .env.example  Dockerfile  Makefile  go.mod  go.sum
services/quantum/: .env.example  Dockerfile  config.py  main.py  requirements.txt
services/zk-proving/: .env.example  Cargo.toml  Dockerfile  build.rs
services/zk-proving/circuits/: age_proof.acir  age_proof.json
services/zk-proving/guest/: Cargo.toml
services/zk-proving/guest/src/: main.rs
services/zk-proving/proto/zkproving/v1/: service.proto
services/zk-proving/src/: config.rs  error.rs  main.rs  state.rs
services/zk-proving/src/grpc/: mod.rs  service.rs
services/zk-proving/src/handlers/: date_attestation.rs  issue_credential.rs  mod.rs  verify_age.rs
services/zk-proving/src/nullifier/: mod.rs  registry.rs
services/zk-proving/src/token/: issuer.rs  mod.rs
services/zk-proving/src/zk/: age_verifier.rs  credential_issuer.rs  date_signer.rs  mod.rs
supabase/: config.toml  seed.sql  storage-policies.sql
supabase/migrations/: 001_researchers.sql  002_studies.sql  003_study_questions.sql  004_nullifiers.sql  005_credentials.sql  006_encrypted_responses.sql  007_privacy_budgets.sql
(+86 files in other folders)
